--- a/assets/style.css
+++ b/assets/style.css
@@ -256,3 +256,11 @@ float: left;
     background-color: var(--third-color);
     color: white; 
 }
+.btn-lienhe {    
+    background-color: white;
+}
+
+.btn-lienhe:hover,
+.btn-lienhe.active {
+    background-color: var(--gray-color);
+}
