--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,14 @@
     --gray-color: #E5E5E5;
     --dark-color: rgb(33, 37, 41);
 }
+
+a,
+a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+
     
     .div_left{
     
@@ -113,7 +121,7 @@ float: left;
 
 .btn-giohang-dathang:hover,
 .btn-giohang-dathang.active {    
-    background-color: var(--dark-color);
+    opacity: 0.9;
     color: whitesmoke;
 }
 
